Fix title heading misalignment.

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -97,7 +97,8 @@ div ul li div {
   .post {
     max-width: 60rem;
   .post__header {
-    margin-bottom: -3em;
+    position: relative;
+    top: -1.25em;
     margin-left: 2em;
     #post__title {
   @media screen and (max-width: $medium - 1) {
@@ -129,11 +130,12 @@ div ul li div {
   }
   .post__content {
   padding: 2em;
-  padding-top: 4em;
+}
+}
+
+.post__main {
   border-radius: 5px;
   border-left: 2px solid $primary;
   box-shadow: 0px 0px 50px 0px #000;
   background: #222;
-  margin-top: -2em;
-}
 }
